refactor: replace deprecated Thread.getId() with Thread.threadId()
Replace deprecated `Thread.currentThread().getId()` calls with
`Thread.currentThread().threadId()` introduced in Java 19 (JEP 400)
and made the preferred API going forward.

(cherry picked from commit 65db722751e3fc2ce84c63a4bfbc9cd8493e8fbe)